# QueryBySingingHumming

./: CMakeLists.txt  mid_list.txt
MIDImodels/: QBH.Model  QBHModel.info
src/AudioFile/: Test.cpp
src/SDFuzzySearch/: SSearchCommon.h  STypes.h
src/SDHBuildModel/: SBuildModel.cpp  SBuildModel.h
src/SDHumming/: CMakeCache.txt  CMakeLists.txt  SMelody.cpp  SMelody.h  STester.cpp  SUtil.cpp  SUtil.h
